--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -6,32 +6,7 @@
     "base/shader.vert",
     "base/shader.frag"
   ],
-  "subpasses": [
-    {
-      "name": "swapchain_subpass",
-      "scenes": [
-        0
-      ],
-      "shaders": {
-        "vertex": 0,
-        "fragment": 1
-      }
-    }
-  ],
-  "passes": [
-    {
-      "name": "swapchain_pass",
-      "subpasses": [
-        0
-      ]
-    }
-  ],
   "frame_graphs": [
-    {
-      "passes": [
-        0
-      ]
-    }
-  ],
-  "frame_graph": 0
+    "default.json"
+  ]
 }
