Use multiple threads to record transfer commands when asynchronously loading asset

--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -1,6 +1,9 @@
 {
   "scenes": [
-    "sponza/Sponza.gltf"
+    "sponza/Sponza.gltf",
+    "box/Box.gltf",
+    "box/Box.gltf",
+    "box/Box.gltf"
   ],
   "shaders": [
     "base/shader.vert",
