Fix macOS error

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
       "name": "Windows RelWithDebug",
       "type": "cppvsdbg",
       "request": "launch",
-      "program": "luka_engine",
+      "program": "${workspaceFolder}/bin/luka_engine",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}/bin",
@@ -39,7 +39,7 @@
       "name": "macOS RelWithDebug",
       "type": "cppdbg",
       "request": "launch",
-      "program": "luka_engine",
+      "program": "${workspaceFolder}/bin/luka_engine",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}/bin",
