Refactor geometry shader

--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -1,7 +1,8 @@
 {
   "scenes": [
     "box/Box.gltf",
-    "sponza/Sponza.gltf"
+    "sponza/Sponza.gltf",
+    "damaged/DamagedHelmet.gltf"
   ],
   "shaders": [
     "default/geometry.vert",
