Fix subpass uniform error when resizing

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,7 +42,7 @@
 			"label": "CMake Debug",
 			"dependsOrder": "sequence",
 			"dependsOn": [
-				"Config",
+				//"Config",
 				"Build Debug"
 			]
 		},
