--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -1,7 +1,7 @@
 {
   "scenes": [
     "box/Box.gltf",
-    "sponza/Sponza.gltf",
+    "scifihelmet/SciFiHelmet.gltf",
     "damaged/DamagedHelmet.gltf"
   ],
   "lights": [
