Add alpha scene

--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -1,6 +1,7 @@
 {
   "scenes": [
     "box/Box.gltf",
+    "alpha/AlphaBlendModeTest.gltf",
     "scifihelmet/SciFiHelmet.gltf",
     "damaged/DamagedHelmet.gltf",
     "sponza/Sponza.gltf"
